--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,16 @@
   },
   "homepage": "https://github.com/AlexLind/blog-domain-challenge-2#readme",
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "prisma": "^4.7.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.7.0"
+    "@prisma/client": "^4.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "morgan": "^1.10.0"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
