--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "@prisma/client": "^4.7.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
@@ -14,6 +16,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prisma": "^4.7.0"
   }
 }
